--- a/index.html
+++ b/index.html
@@ -8,34 +8,59 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>To do List</h1>
-        <section class="input-area">
-            <input type="text">
-            <button>+</button>
+
+       <div class="display-box">
+        <section class="display-header">
+          <img src="images/memo.png" alt="" width="50px">
+          <h1>Daily Note</h1>
+        </section>
+        <section>
+          <div class="display-tabs">
+            <div id="display-underline"></div>
+            <div id="all">할 일</div>
+            <div id="ongoing">진행중</div>
+            <div id="done">완료</div>
+        </div>
+        <div id="display-board">
+
+        </div>
         </section>
 
-        <section class="task-area">
-            <div class="task-tabs">
-                <div id="under-line"></div>
-                <div>모두</div>
-                <div>진행중</div>
-                <div>끝남</div>
-            </div>
             <div>
-                <div class="task">
-                    <div>
-                        집가기
-                    </div>
-                    <div>
-                        <button>Check</button>
-                        <button>Delete</button>
-                    </div>
-                </div>
+                <button type="button" id="add-button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
             </div>
-        </section>
-    </div>
-    
+       </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Memo</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="recipient-name" class="col-form-label">날짜:</label>
+                    <input type="date" id="memo-date" class="form-control"/>
+                  </div>
+                  <div class="mb-3">
+                    <label for="message-text"  class="col-form-label">내용:</label>
+                    <input class="form-control" id="memo-content" />
+                  </div>
+                </form>
+              </div>
+            <div class="modal-footer">
+              <button type="button" id="memo-cancle-button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+              <button type="button" id="memo-add-button" class="btn btn-primary" data-bs-dismiss="modal">등록</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    <script src="https://kit.fontawesome.com/b4957b2c73.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
